--- a/microdiamond-server-auth/src/main/resources/application.properties
+++ b/microdiamond-server-auth/src/main/resources/application.properties
@@ -3,3 +3,11 @@ quarkus.banner.path=banner.txt
 md-users/mp-rest/url=http://localhost:8081
 md-users/mp-rest/scope=javax.inject.Singleton
 %prod.md-users/mp-rest/url=http://md-users:8080
+
+mp.jwt.verify.publickey.location=/publicKey.pem
+mp.jwt.verify.issuer=https://quarkus.io/using-jwt-rbac
+quarkus.smallrye-jwt.enabled=true
+
+jwt.primaryKey.pem=/privateKey.pem
+jwt.iss=https://quarkus.io/using-jwt-rbac
+jwt.expiration.seconds=300
