Permitir registro de nuevos usuarios

--- a/microdiamond-server-auth/src/main/resources/application.properties
+++ b/microdiamond-server-auth/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+microdiamond.app.username=app
+microdiamond.app.password=x2ActfTp5Lbz6cUSTvmsXPbNu
 quarkus.banner.path=banner.txt
 
 md-users/mp-rest/url=http://localhost:8081
@@ -11,3 +13,4 @@ quarkus.smallrye-jwt.enabled=true
 jwt.primaryKey.pem=/privateKey.pem
 jwt.iss=https://quarkus.io/using-jwt-rbac
 jwt.expiration.seconds=300
+jwt.expiration.appuser.seconds=86400
