--- a/microdiamond-server-users/src/main/resources/application.properties
+++ b/microdiamond-server-users/src/main/resources/application.properties
@@ -5,9 +5,12 @@ quarkus.datasource.username = postgres
 quarkus.datasource.password = example
 quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/microdiamond
 
+#quarkus.hibernate-orm.database.generation = drop-and-create
 quarkus.hibernate-orm.database.generation = update
 quarkus.hibernate-orm.database.globally-quoted-identifiers = true
 quarkus.hibernate-orm.log.sql = true
+
+mp.jwt.verify.publickey.location = /publicKey.pem
 
 #Prod
 %prod.quarkus.datasource.jdbc.url = jdbc:postgresql://md-db:5432/microdiamond
