--- a/microdiamond-server-auth/src/main/resources/application.properties
+++ b/microdiamond-server-auth/src/main/resources/application.properties
@@ -2,8 +2,7 @@ microdiamond.app.username=app
 microdiamond.app.password=x2ActfTp5Lbz6cUSTvmsXPbNu
 quarkus.banner.path=banner.txt
 
-md-users/mp-rest/url=http://localhost:8081
-md-users/mp-rest/scope=javax.inject.Singleton
+md-users/mp-rest/url=http://localhost:80/users
 %prod.md-users/mp-rest/url=http://md-users:8080
 
 mp.jwt.verify.publickey.location=/publicKey.pem
