--- a/microdiamond-server-users/src/main/resources/application.properties
+++ b/microdiamond-server-users/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 quarkus.banner.path = banner.txt
 
+quarkus.http.port=8080
 quarkus.datasource.db-kind = postgresql
 quarkus.datasource.username = postgres
 quarkus.datasource.password = example
@@ -10,7 +11,7 @@ quarkus.hibernate-orm.database.generation = update
 quarkus.hibernate-orm.database.globally-quoted-identifiers = true
 quarkus.hibernate-orm.log.sql = true
 
-mp.jwt.verify.publickey.location = /publicKey.pem
+mp.jwt.verify.publickey.location = publicKey.pem
 
 #Prod
 %prod.quarkus.datasource.jdbc.url = jdbc:postgresql://md-db:5432/microdiamond
