--- a/microdiamond-server-users/pom.xml
+++ b/microdiamond-server-users/pom.xml
@@ -31,6 +31,11 @@
   </dependencyManagement>
   <dependencies>
     <dependency>
+      <groupId>com.microdiamond.server</groupId>
+      <artifactId>microdiamond-server-commons</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-resteasy</artifactId>
     </dependency>
