--- a/microdiamond-server-auth/pom.xml
+++ b/microdiamond-server-auth/pom.xml
@@ -31,8 +31,8 @@
   </dependencyManagement>
   <dependencies>
     <dependency>
-      <groupId>com.microdiamond.server</groupId>
-      <artifactId>microdiamond-server-commons</artifactId>
+      <groupId>org.microdiamond.server</groupId>
+      <artifactId>commons</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
@@ -133,6 +133,7 @@
       </build>
       <properties>
         <quarkus.package.type>native</quarkus.package.type>
+        <quarkus.native.additional-build-args>-H:ReflectionConfigurationFiles=reflection-config.json,-H:ResourceConfigurationFiles=resources-config.json</quarkus.native.additional-build-args>
       </properties>
     </profile>
   </profiles>
