--- a/microdiamond-server-users/src/main/resources/application.properties
+++ b/microdiamond-server-users/src/main/resources/application.properties
@@ -3,7 +3,7 @@ quarkus.banner.path = banner.txt
 quarkus.http.port=8080
 quarkus.datasource.db-kind = postgresql
 quarkus.datasource.username = postgres
-quarkus.datasource.password = example
+quarkus.datasource.password = justapassword
 quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/microdiamond
 
 #quarkus.hibernate-orm.database.generation = drop-and-create
@@ -15,4 +15,4 @@ mp.jwt.verify.publickey.location = publicKey.pem
 
 #Prod
 %prod.quarkus.datasource.jdbc.url = jdbc:postgresql://md-db:5432/microdiamond
-%prod.quarkus.datasource.password = example
+%prod.quarkus.datasource.password = justapassword
