--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.microdiamond.server</groupId>
-    <artifactId>microdiamond-server-commons</artifactId>
+    <groupId>org.microdiamond.server</groupId>
+    <artifactId>commons</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
